refactor(asset): 枚举字符串化 + 删除冗余基类 + 代码风格统一
- AssetStatusEnum/AssetRiskEnum: 去掉 IEnum<Integer>，DB 存枚举名字符串
- DDL status/risk_level TINYINT→VARCHAR(20)
- 删除冗余 BaseAssetEntity，直接继承 BaseEntity
- 所有类补一行 Javadoc，冗长注释精简
- 删除未使用的 @Slf4j
- // 改 /* */
- import 合并/排序/对齐